--- a/03-post-process/output-plots-children/12-param-summaries.Rmd
+++ b/03-post-process/output-plots-children/12-param-summaries.Rmd
@@ -200,7 +200,7 @@ my_boxplot(sub_index("mu_phi_O0_O1[origin,pop]", origin = o_hor, pop = c(1,2,4))
 ```{r yr1-ocean-bxp2, fig.width = p3_width, fig.height = p3_height}
 mypar(mfrow = c(1,3), mar = bp_mar, oma = bp_oma)
 my_boxplot("sig_Lphi_O0_O1[", ylab = "Process SD", ylim = c(0,2))
-my_boxplot(sub_index("kappa_phi_O0_O1[pop]", pop = "."), ylab = "Autocorrelation", ylim = c(-1,1)); ref_line(h = 0)
+my_boxplot(sub_index("kappa_phi_O0_O1[pop]", pop = "."), ylab = "AR(1) Coef.", ylim = c(-1,1)); ref_line(h = 0)
 my_boxplot(paste0("rho_Lphi_O0_O1", vcov_inds), ticklabs = vcov_labels, ylab = "Correlation", ylim = c(-1,1)); ref_line(h = 0)
 ```
 
@@ -234,11 +234,4 @@ mypar(mfrow = c(1,3), mar = bp_mar, oma = bp_oma)
 my_boxplot("mu_phi_Rb_Ra", "Average Survival", ylim = ylim_01, ticklab = origins)
 my_boxplot("sig_Lphi_Rb_Ra[", "Process SD", ticklab = origins, ylim = c(0,2))
 my_boxplot("rho_Lphi_Rb_Ra[2,1]", "Correlation (Origins)", ylim = c(-1,1), ticklab = c("")); ref_line(h = 0)
-```
-
-## Pre-spawn Survival
-
-```{r prespawn-surv-bxp, fig.width = p4_width, fig.height = p4_height, out.width = "50%"}
-mypar(mfrow = c(1,3), mar = bp_mar, oma = bp_oma)
-my_boxplot("mu_phi_Sb_Sa", "Average Survival", ylim = ylim_01)
 ```
