--- a/03-post-process/output-plots-children/02-mcmc-diags.Rmd
+++ b/03-post-process/output-plots-children/02-mcmc-diags.Rmd
@@ -46,7 +46,7 @@ discard_params = c(
 no_mcmc_diags_Minam = lapply(discard_params, sub_index, pop = j_min) |>
   lapply(sub_index, LH_type = i_spring) |>
   lapply(sub_index, origin = o_hor) |>
-  lapply(sub_index, year = ts_yrs) |>
+  lapply(sub_index, year = observable) |>
   lapply(unique) |>
   unlist()
 
